<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Trudnoća i razvoj bebe</string>
    <string name="vrsta_pracenja">Odaberite vrstu praćenja</string>
    <string name="pregtracking">Praćenje trudnoće</string>
    <string name="devtracking">Praćenje razvoja bebe</string>
    <string name="expdate">Predviđeni termin poroda</string>
    <string name="birthdate">Datum rođenja bebe</string>
    <string name="notification">Uključi notifikaciju</string>
    <string name="save_changes">Sačuvaj</string>
    <string name="cancel_changes">Otkaži</string>
    <string name="meni_podesavanja">Podešavanja</string>
    <string name="meni_background">Pozadina</string>
    <string name="meni_rateapp">Ocijeni aplikaciju</string>
    <string name="meni_about">O programu</string>
    <string name="verzija">Verzija</string>
    <string name="verzija_nepoznata">Nepoznata verzija!</string>
    <string name="opis_aplikacije">Aplikacija za praćenje razvoja bebe od začeća, pa do navršene jedne godine života.</string>
    <string name="copyright">Copyright© 2012&#8211;2014 by</string><string name="all_rights_reserved">Sva prava zadržana.</string>
    <string name="autor">GenieCode &lt;info@geniecode.net&gt;</string>
    <string name="info_preuzete_website">Sadržaj i informacije koje ova aplikacija koristi su djelimično ili u potpunosti preuzeti sa web portala Ringeraja.ba i vlasništvo su kompanije Danu media d.o.o., njenih partnera ili autora sadržaja.</string>
    <string name="mhalka_member">Ponosni član mHalke: www.mhalka.com</string>
    <string name="mhalka_moto">Yes, we mHalka! :)</string>
    <string name="vasa_beba">Vaša beba je sada u</string>
    <string name="vasa_trudnoca">Vi ste sada u</string>
    <string name="mjesec">mjesecu života</string>
    <string name="sedmica">sedmici trudnoće</string>
    <string name="pune_sedmice">napunjenih sedmica:</string>
    <string name="puni_dani">dana:</string>
    <string name="napunjena_godina">Čestitamo! Vrijeme je da Vaša beba proslavi svoj prvi rođendan.</string>
    <string name="vise_od_godine">Datum kojega ste odabrali sugerira da je Vaše dijete starije od 12 mjeseci. Provjerite da li ste odabrali prave vrijednosti.</string>
    <string name="preko_termina">Čestitamo! Vaša beba je konačno ugledala svijet.</string>
    <string name="namjesti_novo_pracenje">Želite li podesiti aplikaciju za praćenje razvoja Vašeg novorođenčeta?</string>
    <string name="dugme_yes">Da</string>
    <string name="dugme_no">Ne</string>
    <string name="nerealna_vrijednost">Vrijednost za datum koju ste podesili je nerealna! Provjerite da li ste odabrali prave vrijednosti.</string>
    <string name="nove_informacije_scrolling">Nove informacije!</string>
    <string name="nove_informacije_notifikacija">Nove informacije o Vašoj bebi</string>
    <string name="dugi_text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi non ligula eu ligula adipiscing vehicula at at tortor. Phasellus fermentum lobortis justo, vitae sodales quam convallis non. Morbi adipiscing ultrices sapien quis scelerisque. Pellentesque ultricies fermentum elit, vel posuere lectus sagittis id. In ac nisl turpis, aliquam interdum leo. Morbi a risus est, vel pharetra mi. Curabitur purus sem, tincidunt nec tristique nec, varius et quam. Pellentesque adipiscing vulputate ipsum, ac tempor sapien lobortis nec.

Donec blandit feugiat odio a pharetra. Cras pellentesque sagittis lectus nec accumsan. Donec imperdiet odio sit amet tellus interdum eget eleifend odio pellentesque. Nulla eu ultrices turpis. Nunc erat augue, lobortis quis sagittis sit amet, malesuada ut mauris. Fusce nec dui felis, quis tristique mauris. Praesent vehicula ipsum a diam semper sed pulvinar est dapibus. Praesent ullamcorper, eros sit amet sodales consectetur, mauris diam congue ante, quis imperdiet est nibh at nunc. Curabitur mollis vestibulum dui, at adipiscing leo suscipit quis. Nunc sodales dui sed enim facilisis condimentum.

Nulla facilisi. Aliquam tincidunt urna a nibh commodo sed hendrerit felis vulputate. Donec ut posuere tortor. Suspendisse lacinia placerat lectus at imperdiet. Morbi sit amet mauris tempus urna semper eleifend vitae congue odio. Aliquam non ante dolor, in placerat elit. Donec ac elit molestie nisi commodo aliquet sit amet nec dui. Donec eget erat justo, ac tristique nunc. In faucibus viverra eros. Vestibulum rutrum vestibulum risus, ac condimentum lorem egestas non. Donec interdum tristique euismod. Nullam tincidunt congue dictum. Aenean elit odio, placerat sit amet suscipit sit amet, luctus ut lacus.

Maecenas dignissim urna eget tortor pretium malesuada. Cras tristique mauris et metus viverra vestibulum. Sed eros nulla, vehicula ac eleifend nec, ornare vel nibh. Proin et dui eu dui malesuada tempor id sit amet lorem. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Pellentesque pulvinar porttitor viverra. Nam ullamcorper blandit augue et commodo. Suspendisse sit amet blandit enim.

Pellentesque vitae quam neque, aliquam cursus diam. Aliquam blandit orci nec velit fermentum ac consequat nibh placerat. Nam a viverra nisl. Cras leo magna, venenatis ut laoreet id, condimentum sed velit. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia Curae; Aliquam gravida facilisis purus eget semper. In porta massa vitae nunc dictum eu auctor odio cursus. Nunc aliquam, massa quis condimentum adipiscing, nisl augue viverra enim, sit amet adipiscing dolor nibh vitae dolor. Suspendisse fermentum nulla quis velit volutpat cursus. Phasellus vestibulum tincidunt sodales. Quisque tempor lectus vitae leo aliquet placerat ut sed augue.</string>
    <string name="touch_to_skip">Pritisni za nastavak</string>
    <string-array name="backgrounds">
        <item >Plava</item>
        <item >Roza</item>
        <item >Bez pozadine</item>
    </string-array>
    <string name="bg_change_title">Odaberite pozadinu</string>
    <string name="no_google_play">Ne mogu otvoriti Google Play prodavnicu, probajte prethodno instalirati Google aplikacije.</string>
</resources>
