<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:ads="http://schemas.android.com/apk/lib/com.google.ads"
    android:id="@+id/llPregTracker"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/txtStarostPloda"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingTop="5dp"
        android:paddingLeft="5dp"
        android:paddingRight="5dp"
        android:text="@string/sedmica"
        android:textAppearance="?android:attr/textAppearanceMedium" />
    
    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" >
        
        <ScrollView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="5dp"
            android:paddingRight="5dp"
            android:layout_above="@+id/adView"
            android:layout_alignParentTop="true"
            android:fillViewport="true" >
            
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content" >
                
                <ImageView
                    android:id="@+id/ivSlikaPlod"
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:paddingTop="5dp"
                    android:src="@drawable/sedmica01"
                    android:contentDescription="@string/pregtracking"
                    android:layout_alignParentLeft="true" />
                
                <TextView
                    android:id="@+id/txtIntroPodaciPlod"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/pregtracking"
                    android:layout_toRightOf="@+id/ivSlikaPlod"
                    android:paddingTop="5dp"
                    android:paddingLeft="5dp"
                    android:textAppearance="?android:attr/textAppearanceSmall" />
                
                <TextView
                    android:id="@+id/txtPodaciPlod"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/ivSlikaPlod"
                    android:text="@string/dugi_text"
                    android:paddingTop="5dp"
                    android:textAppearance="?android:attr/textAppearanceSmall"/>
            
            </RelativeLayout>
            
        </ScrollView>
        
        <com.google.ads.AdView
            android:id="@+id/adView"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            ads:adSize="SMART_BANNER"
            ads:adUnitId="a14f79ada1d298f"
            ads:loadAdOnCreate="true" />
    
    </RelativeLayout>

</LinearLayout>